--- a/src/gaprogress.ui
+++ b/src/gaprogress.ui
@@ -32,6 +32,13 @@
     </widget>
    </item>
    <item>
+    <widget class="QProgressBar" name="progressBar_2">
+     <property name="value">
+      <number>0</number>
+     </property>
+    </widget>
+   </item>
+   <item>
     <widget class="QTextEdit" name="textEdit">
      <property name="readOnly">
       <bool>true</bool>
