Network structure can now be saved.

--- a/src/runproperties.ui
+++ b/src/runproperties.ui
@@ -95,6 +95,16 @@
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QCheckBox" name="checkBox_XML">
+       <property name="text">
+        <string>Save network structure</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
